2010-02-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-and-render-timeline): copy
	spec-string and clear its text properties.

	* twittering-mode.el (twittering-http-default-sentinel): use
	buffer object directly.
	(twittering-http-get-default-sentinel): likewise.

	* twittering-mode.el (twittering-current-timeline): keep the
	current timeline spec string.

	* twittering-mode.el (twittering-switch-timeline): adjust the
	current timeline spec string to the given `spec-string' even if
	they mean the same timeline.

	* twittering-mode.el (twittering-http-get-default-sentinel):
	invoke `twittering-render-timeline' only if necessary.
	(twittering-add-statuses-to-timeline-data): return newly retrieved
	statuses.

	* twittering-mode.el (twittering-render-timeline): receive
	`timeline-data' as an optional argument.
	(twittering-http-get-default-sentinel): invoke
	`twittering-render-timeline' with new statuses.

2010-02-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-usernames-from-timeline): new
	function for collecting user screen names in a timeline.
	(twittering-make-list-from-assoc): removed.
	(twittering-read-username-with-completion): use
	`twittering-get-usernames-from-timeline' instead of
	`twittering-make-list-from-assoc'.
	(twittering-read-timeline-spec-with-completion): likewise.

2010-02-14  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Parse current-buffer as a xmltree.

2010-02-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-current-timeline-spec-string):
	new variable for storing the current timeline spec string.
	(twittering-last-requested-timeline-spec-string): removed.
	(twittering-last-retrieved-timeline-spec-string): removed.
	(twittering-set-current-timeline-spec-string): new function for
	referring the current timeline spec string.
	(twittering-current-timeline-spec-string): new function for